--- a/index.html
+++ b/index.html
@@ -283,6 +283,93 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 							<p class="resultStatistics__text">Hight Rankings</p>
 				</div>
 			</section>
+
+			<section>
+				<div class="border">
+					<p class="borderText">Our Blog</p>					
+				</div>
+					<h2 class="OurBlog__h2">Every Singel Update From Here</h2>
+					<div class="blog">
+						<div class="blog__item">
+							<div class="blog__imges">
+								<img class="blog__img" src="img/Image(12).png" alt="">
+							</div>
+							<h5 class="blog__type">35 Stellar Graphic Design Blogs to Keep YouEducated and Inspired</h5> 
+							<div class="blog__description">
+								<div class="blog__date">
+								<img src="img/timer.svg" alt=""> 
+								<p class="blog__date_text">January 25, 2021</p>
+								</div>
+								<div class="blog__date">
+								<img src="img/person.svg"> 
+								<p class="blog__date_text">Cristofer Westervelt</p>	
+								</div>
+								<div class="blog__date">
+								<img src="img/message-circle.svg"> 
+								<p class="blog__date_text">10 Comment</p>	
+								</div>
+							</div>
+							<p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.</p>
+							<button  class="blog__btn">Read More</button>
+						</div>
+							<div class="blog__item">
+							<div class="blog__imges">
+								<img class="blog__img" src="img/Image(13).png" alt="">
+							</div>
+							<h5 class="blog__type">Ridiculously powerful 2021 iPad Pro may drop this month</h5> 
+							<div class="blog__description">
+								<div class="blog__date">
+								<img src="img/timer.svg" alt=""> 
+								<p class="blog__date_text">January 25, 2021</p>
+								</div>
+								<div class="blog__date">
+								<img src="img/person.svg"> 
+								<p class="blog__date_text">Cristofer Westervelt</p>	
+								</div>
+								<div class="blog__date">
+								<img src="img/message-circle.svg"> 
+								<p class="blog__date_text">10 Comment</p>	
+								</div>
+							</div>
+							<p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.</p>
+							<button class="blog__btn">Read More</button>
+						</div>
+								<div class="blog__item">
+							<div class="blog__imges">
+								<img class="blog__img" src="img/Image(14)-min.png" alt="">
+							</div>
+							<h5 class="blog__type">Memphis Design: the defining look of the 1980s</h5>
+							<div class="blog__description">
+								<div class="blog__date">
+								<img src="img/timer.svg" alt=""> 
+								<p class="blog__date_text">January 25, 2021</p>
+								</div>
+								<div class="blog__date">
+								<img src="img/person.svg"> 
+								<p class="blog__date_text">Cristofer Westervelt</p>	
+								</div>
+								<div class="blog__date">
+								<img src="img/message-circle.svg"> 
+								<p class="blog__date_text">10 Comment</p>	
+								</div>
+							</div>
+							<p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.</p>
+							<button class="blog__btn">Read More</button>
+						</div>
+					</div>
+			</section>
+			<section class="Subscribe">
+				
+					<div class="Subscribe__name">
+						<p class="Subscribe__text">Subscribe Newsletter</p>
+						<h2 class="Subscribe__h2">Lets Stay In Touch</h2>
+					</div>
+					<div class="form">
+						<input class="form__input" type="" name="">
+						<button class="form__btn" type="submit">Subscribe Now</button>
+					</div>
+				
+			</section>
 </main>
 
 
