--- a/index.html
+++ b/index.html
@@ -364,18 +364,47 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 						<p class="Subscribe__text">Subscribe Newsletter</p>
 						<h2 class="Subscribe__h2">Lets Stay In Touch</h2>
 					</div>
-					<div class="form">
-						<input class="form__input" type="" name="">
+					<form class="form">
+						<input class="form__input" type="email" name="" placeholder="Enter your email" required="">
 						<button class="form__btn" type="submit">Subscribe Now</button>
-					</div>
+					</form>
 				
 			</section>
 </main>
-
+	</div>
+<footer class="footer">
+	<div class="footer-block">
+	<div class="footer__about_us">
+		<div class="footer__big_imges">
+			<img class="footer__img" src="img/Digiency(Dark)2(2).png" alt="placeholder+image">
+		</div>	
+				<p class="footer__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor facilisi quis risus egestas ipsum.</p>
+		
+	</div>
+	<div class="footer__contacts">
+		<h4 class="footer__h4">Location</h4>
+			<p class="footer__text">3517 W. Gray St. Utica, Pennsylvania 57867</p>
+	</div>
+	<div class="footer__contacts">
+		<h4 class="footer__h4">Call Us</h4>
+			<p class="footer__text">(252) 555-0126<br> info@youremai.com</p>
+	</div>
+	<div  class="footer__contacts3">
+		<h4  class="footer__h4">Follow  Us</h4>
+			<div class="footer__imges">
+				<img src="img/Facebook(1).svg">
+				<img src="img/Instagram(1).svg">
+				<img src="img/Skype(1).svg">
+				<img src="img/Twitter.svg">
+			</div>
+	</div>
+	</div>
+	<div class="footer__border"></div>
+</footer>
 
 
 		
-	</div>
+	
 
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
