--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 						<p class="Subscribe__text">Subscribe Newsletter</p>
 						<h2 class="Subscribe__h2">Lets Stay In Touch</h2>
 					</div>
-					<form class="form" method="post" id="form">
+					<form class="form" method="post" id="form" action="#">
 						<input id="input" class="form__input" type="email" name="" placeholder="Enter your email" required="">
 					<button id="SubscribeBtn"  class="form__btn" type="submit">Subscribe Now</button>	
 					</form>
