--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	 	 	<link rel='stylesheet' href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Disign</title>
+	<link rel="stylesheet" href="css/chief-slider.min.css">
+  <script defer src="js/chief-slider.min.js"></script>
 </head>
 <body class="body">
 	<div class="wrapper">
@@ -176,7 +178,47 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 					<p class="borderText">Our Testimonial</p>
 				</div>
 					<h2 class="ClientSaying">What Our Client Saying</h2>
+
+
+ 
+        
 						<div class="slider">
+							<div class="slider__item">
+								<img src="img/Component1.svg">
+									<p class="slider__comment">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Ultrices blandit pelle ntesque nibh arcu elementum odio justo. Rhoncus.</p>
+										<div class="slider__name">
+											<img src="img/Image(9).png">
+											<div class="slider__text">
+												<p class="slider__orangeName">Phillip Levin</p>
+												<p class="slider__profession">CEO / Creative IT</p>
+												</div>
+													<img src="img/double-quotes-l.svg">
+										</div>
+							</div>
+							<div class="slider__item">
+								<img src="img/Component1.svg">
+									<p class="slider__comment">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Ultrices blandit pelle ntesque nibh arcu elementum odio justo. Rhoncus.</p>
+										<div class="slider__name">
+											<img src="img/Image(10).png">
+											<div class="slider__text">
+												<p class="slider__orangeName">Lincoln Lipshutz</p>
+												<p class="slider__profession">CEO / Creative IT</p>
+											</div>
+													<img src="img/double-quotes-l.svg">
+										</div>
+							</div>
+							<div class="slider__item">
+								<img src="img/Component1.svg">
+									<p class="slider__comment">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Ultrices blandit pelle ntesque nibh arcu elementum odio justo. Rhoncus.</p>
+										<div class="slider__name">
+											<img src="img/Image(11).png">
+											<div class="slider__text">
+												<p class="slider__orangeName">Craig Siphron</p>
+												<p class="slider__profession">CEO / Creative IT</p>
+											</div>
+													<img src="img/double-quotes-l.svg">
+										</div>
+							</div>
 							<div class="slider__item">
 								<img src="img/Component1.svg">
 									<p class="slider__comment">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Ultrices blandit pelle ntesque nibh arcu elementum odio justo. Rhoncus.</p>
@@ -422,6 +464,10 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
               		</div>	
         </div>      
     </div>	
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/slick.js"></script>
 <script src="js/read_more.js"></script>
 <script src="js/btn_submite.js"></script>	
 <script src="js/script.js"></script>
