--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	 	 <link rel='stylesheet' href="css/normalize.css">
 	 	 	<link rel='stylesheet' href="css/style.css">
+	 	 		<link rel="stylesheet" media="screen and (max-width:1023px)" href="css/style_1024.css">
+	 	 			<link rel="stylesheet" media="screen and (max-width:767px)" href="css/style_768.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Disign</title>
-	<link rel="stylesheet" href="css/chief-slider.min.css">
-  <script defer src="js/chief-slider.min.js"></script>
+	
 </head>
 <body class="body">
 	<div class="wrapper">
@@ -338,9 +339,11 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 					<h2 class="OurBlog__h2">Every Singel Update From Here</h2>
 					<div class="blog">
 						<div id="text" class="blog__item">
+							<div class="adaptation">
 							<div class="blog__imges">
 								<img class="blog__img" src="img/Image(12).png" alt="">
 							</div>
+							<div class="adaptation1">
 							<h5 class="blog__type">35 Stellar Graphic Design Blogs to Keep YouEducated and Inspired</h5> 
 							<div class="blog__description">
 								<div class="blog__date">
@@ -355,14 +358,18 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 								<img src="img/message-circle.svg"> 
 								<p class="blog__date_text">10 Comment</p>	
 								</div>
+								</div>
+							</div>
 							</div>
 							<p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.<span id="dots">...</span><span id="more">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.</span></p>
 							<button  id="buttonText" class="blog__btn" onclick="readMore()">Read More</button>
 						</div>
 						<div id="text2" class="blog__item">
+							<div class="adaptation">
 							<div class="blog__imges">
 								<img class="blog__img" src="img/Image(13).png" alt="">
 							</div>
+							<div class="adaptation1">
 							<h5 class="blog__type">Ridiculously powerful 2021 iPad Pro may drop this month</h5> 
 							<div class="blog__description">
 								<div class="blog__date">
@@ -378,13 +385,17 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 								<p class="blog__date_text">10 Comment</p>	
 								</div>
 							</div>
+							</div>
+							</div>
 							<p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.<span id="dots2">...</span><span id="more2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.</span></p>
 							<button id="buttonText" class="blog__btn" onclick="readMore2()">Read More</button>
 						</div>
 						<div id="text3" class="blog__item">
+							<div class="adaptation">
 							<div class="blog__imges">
 								<img class="blog__img" src="img/Image(14)-min.png" alt="">
 							</div>
+							<div class="adaptation1">
 							<h5 class="blog__type">Memphis Design: the defining look of the 1980s</h5>
 							<div class="blog__description">
 								<div class="blog__date">
@@ -399,6 +410,8 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 								<img src="img/message-circle.svg"> 
 								<p class="blog__date_text">10 Comment</p>	
 								</div>
+							</div>
+							</div>
 							</div>
 							<p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.<span id="dots3">...</span><span id="more3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.</span></p>
 							<button id="buttonText" class="blog__btn" onclick="readMore3()">Read More</button>
@@ -470,7 +483,7 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 <script src="js/slick.js"></script>
 <script src="js/read_more.js"></script>
 <script src="js/btn_submite.js"></script>	
-<script src="js/script.js"></script>
+<script src="js/burger.js"></script>
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
 
