--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	 	 	<link rel='stylesheet' href="css/style.css">
 	 	 		<link rel="stylesheet" media="screen and (max-width:1023px)" href="css/style_1024.css">
 	 	 			<link rel="stylesheet" media="screen and (max-width:767px)" href="css/style_768.css">
+	 	 				<link rel="stylesheet" media="screen and (max-width:319px)" href="css/style_320.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Disign</title>
 	
