--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	 	 	<link rel='stylesheet' href="css/style.css">
 	 	 		<link rel="stylesheet" media="screen and (max-width:1024px)" href="css/style_1024.css">
 	 	 			<link rel="stylesheet" media="screen and (max-width:768px)" href="css/style_768.css">
-	 	 				<link rel="stylesheet" media="screen and (max-width:320px)" href="css/style_320.css">
+	 	 				<link rel="stylesheet" media="screen and (max-width:321px)" href="css/style_320.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Disign</title>
 	
@@ -485,7 +485,7 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 <script src="js/read_more.js"></script>
 <script src="js/btn_submite.js"></script>	
 <script src="js/burger.js"></script>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+<!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 
 
 </body>
