--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 					</div>
 
 					<div class="WhatMatters__imges">
-						<img class="WhatMatters__img" src="img/Frame19.png" alt="Picture: woman working in the office
-	">
+						<img class="WhatMatters__img" src="img/Frame19.png" alt="Picture: woman working in the office">
 					</div>
 				
 			</section>
@@ -175,7 +174,7 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 							<img src="img/Image(8).png" alt="placeholder+image">
 						</div>
 					</div>
-			</section>
+			</section> 
 
 			<section>
 				<div class="border">
