--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 							</div>
 							</div>
 							<p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.<span id="dots2">...</span><span id="more2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.</span></p>
-							<button id="buttonText" class="blog__btn" onclick="readMore2()">Read More</button>
+							<button id="buttonText2" class="blog__btn" onclick="readMore2()">Read More</button>
 						</div>
 						<div id="text3" class="blog__item">
 							<div class="adaptation">
@@ -416,7 +416,7 @@ odo enim ornare turpis tempus enim, nibh nulla. Rhoncus sed.</p>
 							</div>
 							</div>
 							<p class="blog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.<span id="dots3">...</span><span id="more3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget nunc, sed sed sed. Sit integer at dui at non ipsum tellus ac. Est.</span></p>
-							<button id="buttonText" class="blog__btn" onclick="readMore3()">Read More</button>
+							<button id="buttonText3" class="blog__btn" onclick="readMore3()">Read More</button>
 						</div>
 					</div>
 			</section>
